tests/snapshots/examples_fixtures/aoc__2024__day06_test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2024/day06_test.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:21:5
   |
21 |     assert_eq(Day06.day06a_from_lines(sample_grid()), 41)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:26:5
   |
26 |     assert_eq(Day06.day06b_from_lines(sample_grid()), 6)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:35:5
   |
35 |     assert_eq(Day06.day06a_from_lines(grid), 2)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:43:5
   |
43 |     assert_eq(Day06.day06b_from_lines(grid), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:56:5
   |
56 |     assert_eq(Day06.day06a_from_lines(grid), 2)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:75:5
   |
75 |     assert_eq(result_b >= 0, true)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:81:5
   |
81 |     assert_eq(Day06.day06a_from_lines(grid), 1)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;


error[E004]: Undefined Variable

I can't find a value named `assert_eq`.

  examples/aoc/2024/day06_test.flx:82:5
   |
82 |     assert_eq(Day06.day06b_from_lines(grid), 0)
   |     ^^^^^^^^^

Hint:
  Define it first: let assert_eq = ...;

Found 8 errors.
== stdout ==
<not executed>
